fix(css): table with wrong background color

--- a/frontend/src/container/InfraMonitoringK8s/Base/K8sBaseList.module.scss
+++ b/frontend/src/container/InfraMonitoringK8s/Base/K8sBaseList.module.scss
@@ -49,7 +49,7 @@
 			line-height: 18px;
 			letter-spacing: 0.44px;
 			text-transform: uppercase;
-			background: var(--l1-background) !important;
+			background: var(--bg-ink-500) !important;
 
 			&::before {
 				background: transparent !important;
@@ -61,7 +61,7 @@
 			font-size: 13px;
 			line-height: 20px;
 			color: var(--l1-foreground);
-			background: var(--l1-background);
+			background: var(--bg-ink-500);
 			border-bottom: none;
 
 			&:before,
@@ -87,7 +87,7 @@
 		}
 
 		:global(.ant-table-tbody > tr:hover > td) {
-			background: var(--l1-background);
+			background: var(--bg-ink-500);
 		}
 
 		:global(.ant-table-tbody > tr:not(.ant-table-expanded-row):hover > td) {
@@ -107,7 +107,7 @@
 		position: fixed;
 		bottom: 0;
 		width: calc(100% - 54px);
-		background: var(--l1-background);
+		background: var(--bg-ink-500);
 		padding: 16px;
 		margin: 0;
 		padding-right: 72px;
